get location function in personal data GUI

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="purpose_lose_weight">Lose Weight</string>
     <string name="purpose_fun">For fun</string>
     <string name="title_activity_history">History</string>
+    <string name="update_home_location">Update Home Location</string>
 
 </resources>
