--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,5 +41,6 @@
     <string name="purpose_fun">For fun</string>
     <string name="title_activity_history">History</string>
     <string name="update_home_location">Update Home Location</string>
+    <string name="title_activity_main_page">MainPage</string>
 
 </resources>
