--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="Save_Button">Save</string>
     <string name="Cancel_Button">Cancel</string>
     <string name="title_activity_google_login">Connect with Google Account</string>
-    <string name="GoogleLogin">Connect with Google</string>
+    <string name="GoogleLogin">Log in with Google</string>
     <string name="Connect_Button">Connect</string>
     <string name="AuthCode">Authentication Code</string>
     <string name="title_activity_sensor">Sensor</string>
@@ -41,5 +41,6 @@
     <string name="purpose_fun">For fun</string>
     <string name="title_activity_history">History</string>
     <string name="update_home_location">Update Home Location</string>
+    <string name="login_offline">Log in Offline</string>
 
 </resources>
