--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,12 +3,10 @@
 
     <string name="app_name">Run My Way</string>
     <string name="action_settings">Settings</string>
-    <string name="ProgressIcon">Schedule</string>
-    <string name="MapIcon">Map</string>
+    <string name="ScheduleIcon">Schedule</string>
     <string name="HistoryIcon">History</string>
     <string name="PersonalDataIcon">Personal Data</string>
     <string name="title_activity_personal_data">Personal Particulars</string>
-    <string name="title_activity_get_map">GetMap</string>
     <string name="Name_Textview">Username</string>
     <string name="Gender_Textview">Gender</string>
     <string name="Height_Textview">Height (cm)</string>
@@ -22,10 +20,6 @@
     <string name="GoogleLogin">Login with Google</string>
     <string name="Connect_Button">Connect</string>
     <string name="AuthCode">Authentication Code</string>
-    <string name="title_activity_sensor">Sensor</string>
-    <string name="title_activity_weather">Weather</string>
-    <string name="WeatherIcon">Weather</string>
-    <string name="SensorIcon">Sensor</string>
     <string name="init_time_second">00:00</string>
     <string name="init_time_100millisecond">0:00:00.0</string>
     <string name="menu_setting_timer_unit">Setting timer unit</string>
@@ -34,7 +28,6 @@
     <string name="menu_setting_second">1 Second</string>
     <string name="menu_setting_100milisec">0.1 Second</string>
     <string name="title_activity_schedule">Schedule</string>
-    <string name="hello_world">Hello world!</string>
     <string name="schedule_title">Schedule</string>
     <string name="purpose_exercise">Exercise</string>
     <string name="purpose_lose_weight">Lose Weight</string>
@@ -43,5 +36,11 @@
     <string name="update_home_location">Update Home Location</string>
     <string name="login_offline">Login Offline</string>
     <string name="title_activity_main_page">MainPage</string>
+    <string name="Space">  </string>
+    <string name="start">Start</string>
+    <string name="fourspaces">    </string>
+    <string name="stop">Stop</string>
+    <string name="startTime">Start Time: </string>
+    <string name="stopTime">Stop Time: </string>
 
 </resources>
