schedule in progress

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,7 +42,6 @@
     <string name="stop">Stop</string>
     <string name="startTime">Start Time: </string>
     <string name="stopTime">Stop Time: </string>
-    <string name="RebuildConflict">Reschedule Conflict</string>
-    <string name="RebuildMissed">Reschedule Missed</string>
+    <string name="Rebuild">Reschedule</string>
 
 </resources>
